--- a/biology.html
+++ b/biology.html
@@ -176,7 +176,7 @@
                 </div>
             
                 <div class="RightBar">
-                   <a href="#">
+                   <a href="account.html">
                 <i class="fa fa-user-circle-o"></i></a>
                 </div> 
             </div>
